FIX Combo-box : escape just closes the popup, empty closes too, and keeps empty when blurring

--- a/skins/default/form.scss
+++ b/skins/default/form.scss
@@ -26,6 +26,10 @@ input.datetime {
 	display: none;
 }
 
+.ui-state-active {
+	background: $selected !important;
+}
+
 .ui-autocomplete {
 	max-height: 230px;
 	overflow-y: scroll;
